Archive2/07/90bc62fb7e3434/output
main.cpp: In function 'int main()':
main.cpp:5:21: error: deducing from brace-enclosed initializer list requires #include <initializer_list>
     auto i{ 1, 2, 3 };
                     ^
main.cpp:6:43: error: template argument 1 is invalid
     print_with_incomplete_type<decltype(i)>{};
                                           ^
