Archive2/07/90bc62fb7e3434/main.cpp
template <typename T> struct print_with_incomplete_type;

int main()
{
    auto i{ 1, 2, 3 };
    print_with_incomplete_type<decltype(i)>{};
} 
